--- a/src/css/main.css
+++ b/src/css/main.css
@@ -502,10 +502,19 @@ a {
   padding: clamp(10px, 2.5vw, 15px);
 }
 .config-start__box {
+  font-size: 14px;
+  color: #adadad;
+}
+.config-start .divider {
+  margin-block: 0 5px;
+}
+.config__option {
   display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
+  justify-content: flex-start;
+  align-items: center;
   flex-flow: row nowrap;
+  margin-bottom: 10px;
+  gap: 5px;
 }
 .config__box {
   display: flex;
@@ -520,6 +529,7 @@ a {
   text-overflow: ellipsis;
   overflow: hidden;
   font-size: clamp(12px, 2.5vw, 14px);
+  margin-bottom: 8px;
 }
 .config__title em {
   font-style: normal;
@@ -533,7 +543,7 @@ a {
   margin-bottom: clamp(10px, 0.5vw, 15px);
 }
 .config__item:last-child {
-  margin-bottom: clamp(10px, 0.5vw, 25px);
+  margin-bottom: clamp(15px, 0.5vw, 25px);
 }
 .config__item--cb {
   display: flex;
