--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -694,11 +694,26 @@ a {
     padding: clamp(10px, 2.5vw, 15px);
 
     &__box {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-end;
-      flex-flow: row nowrap;
+      // display: flex;
+      // justify-content: space-between;
+      // align-items: flex-end;
+      // flex-flow: row nowrap;
+      font-size: 14px;
+      color: $clr-sub;
     }
+
+    .divider {
+      margin-block: 0 5px;
+    }
+  }
+
+  &__option {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-flow: row nowrap;
+    margin-bottom: 10px;
+    gap: 5px;
   }
 
   /* -------------------------------------------------------------------------- */
@@ -717,6 +732,7 @@ a {
     text-overflow: ellipsis;
     overflow: hidden;
     font-size: clamp(12px, 2.5vw, 14px);
+    margin-bottom: 8px;
 
     em {
       font-style: normal;
@@ -735,7 +751,7 @@ a {
     }
 
     &:last-child {
-      margin-bottom: clamp(10px, .5vw, 25px);
+      margin-bottom: clamp(15px, .5vw, 25px);
     }
 
     &--cb {
