--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -8,7 +8,7 @@ $clr-accent: #f1f1f1;
 $clr-red: #e06c75;
 $clr-code-bg: #ffffff;
 $clr-config-bg: #ffffff;
-$bdc: #d1d1d1;
+$bdc: #e0e0e0;
 
 $ff: #adadad38;
 
