--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: 'NotoSansJP';
+  src: url('/src/font/NotoSansJP-VariableFont_wght.ttf');
+  font-weight: 400 700;
+}
+
 $bgc-main: #ffffff;
 $bgc-sub: #dfdfdf;
 $bgc-accent: #f1f1f1;
